# Musix

./: .eslintignore  .eslintrc.js  index.html  package-lock.json  package.json
MusixManager/: pom.xml
musix-algorithm/: analisis-data.py
musix-app/: .gitignore  package-lock.json  package.json  vite.config.js.timestamp-1666559951419.mjs
musix-app/src/: App.jsx  main.jsx
musix-app/src-tauri/: Cargo.toml  tauri.conf.json
musix-app/src-tauri/src/: main.rs
musix-app/src/components/: Artist.jsx  FormCreatePlaylist.jsx  Header.jsx  Login.jsx  Menu.jsx  MusicBox.jsx  Player.jsx  SettingsUser.jsx  SignUp.jsx  SongBox.jsx  SongBoxLarge.jsx
musix-app/src/context/: Context.jsx  PlayerContext.jsx  PlaylistContext.jsx
musix-app/src/helpers/: Favorites.js  doublyLinkedList.js  fetch.js  playerFunctions.js  responsiveBoxes.js
musix-app/src/layouts/: DefaultLayout.tsx
musix-app/src/pages/: Artist.jsx  Auth.jsx  Home.jsx  Lyrics.jsx  Playlist.jsx  Playlists.jsx  Profile.jsx  Queue.jsx  Results.jsx
musix-backend/: package-lock.json
src/: App.jsx
src-tauri/: tauri.conf.json
src/components/: Artist.jsx  Genres.jsx  Header.jsx  Login.jsx  Menu.jsx  MusicBox.jsx  Player.jsx  SettingsUser.jsx  SignUp.jsx  SongBox.jsx  SongBoxLarge.jsx
src/context/: PlayerContext.jsx
src/helpers/: playerFunctions.js  responsiveBoxes.js
src/main/: main.ts
src/pages/: Home.jsx  Playlist.jsx  TestComponents.jsx
src/renderer/: App.jsx
src/styles/: App.css  Artist.css  Header.css  Home.css  auth.css  genre-box.css  music-box.css  player.css  settings-user.css  song-box.css
(+47 files in other folders)
